# td-sync

./: pyproject.toml
src/td_sync/: __init__.py  cancel_flows.py  download.py  sync.py  trigger.py
